--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         <p class="text-base md:text-lg mb-4">मैं अपने दिल की बात कह पाऊं 🗣️</p>  
         <p class="text-base md:text-lg mb-4">कह पाऊं कि मै डरता हूं तुम्हे खोने से 😟</p>  
         <p class="text-base md:text-lg mb-4">कह पाऊं कि कमियां बहुत है मुझमें 😔</p>  
-        <p class="text-base md:text-lg mb-4">कह पाऊं कि शायद काबिल नहीं हूं मैं तेरे लिए ….. 1 💔</p>  
+        <p class="text-base md:text-lg mb-4">कह पाऊं कि शायद काबिल नहीं हूं मैं तेरे लिए  💔</p>  
 
         <p class="text-base md:text-lg mb-4">पर सच है कि ☝️</p>  
         <p class="text-base md:text-lg mb-4">दर्द इतना है कि 😢</p>  
         <p class="text-base md:text-lg mb-4">अकेले ना सहा जाएगा ☹️</p>  
-        <p class="text-base md:text-lg mb-4">महफ़िल में हंसता हूं और तन्हाई में रहता हूं ….2 🎭</p>  
+        <p class="text-base md:text-lg mb-4">महफ़िल में हंसता हूं और तन्हाई में रहता हूं  🎭</p>  
 
         <p class="text-base md:text-lg mb-4">बड़ी हिम्मत दी है तेरे इश्क़ ने , 💪</p>  
         <p class="text-base md:text-lg mb-4">प्यार के उस पंछी को कभी उड़ने मत देना, 🕊️</p>  
         <p class="text-base md:text-lg mb-4">अगर सजा देनी है, ⚖️</p>  
         <p class="text-base md:text-lg mb-4">तो देना मंजूर होगी, 🙏</p>  
-        <p class="text-base md:text-lg mb-4">बस सजा में हो सके तो माफी ही देना …3 🥺</p>  
+        <p class="text-base md:text-lg mb-4">बस सजा में हो सके तो माफी ही देना  🥺</p>  
 
         <a href="#" id="surpriseButton" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition mt-4">Surprise for You! 🎉</a>  
     </div>  
